added active admin directory and precompiled

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -13,10 +13,12 @@ active_admin.js: active_admin-5bcae9938ec0156424c2fd9182896a56.js
 active_admin/index.js: active_admin-5bcae9938ec0156424c2fd9182896a56.js
 application.js: application-ad9ed47475540b3c52ac1a9192777d54.js
 application/index.js: application-ad9ed47475540b3c52ac1a9192777d54.js
-active_admin.css: active_admin-ba499f523675e59b68ccbdfbddf60848.css
-active_admin/index.css: active_admin-ba499f523675e59b68ccbdfbddf60848.css
-application.css: application-ad08d0a3392457032ae8b39716001a04.css
-application/index.css: application-ad08d0a3392457032ae8b39716001a04.css
+active_admin.css: active_admin-70570bc7e151070129711da62bbe996b.css
+active_admin/index.css: active_admin-70570bc7e151070129711da62bbe996b.css
+active_admin/print.css: active_admin/print-30e6ab0e309aa8f72462c0d5f78483b2.css
+active_admin/print/index.css: active_admin/print-30e6ab0e309aa8f72462c0d5f78483b2.css
+application.css: application-ef2f6f0f94e49d2f5d6768850e021b15.css
+application/index.css: application-ef2f6f0f94e49d2f5d6768850e021b15.css
 active_admin/admin_notes_icon.png: active_admin/admin_notes_icon-25b05cd8197f7a271d0624853a6dbdd5.png
 active_admin/admin_notes_icon/index.png: active_admin/admin_notes_icon-25b05cd8197f7a271d0624853a6dbdd5.png
 active_admin/datepicker/datepicker-header-bg.png: active_admin/datepicker/datepicker-header-bg-6f0baad739953cb1a0413c031841e82f.png
